added recent project view and project content view
